

== Changes between Counterclockwise 0.28.1 and 0.28.2

`0.28.2` released on October XXX, 2014

=== Fix

- Removed default keybinding kbd:[Alt+Command+Q E] for command 'New REPL client for Eclipse embedded nrepl server (advanced usages) which was conflicting with a JDT command
- Fixed `Convert to Clojure Project` when one wants a quick & dirty way to add clojure jar to a project classpath

=== Enhancements
- Embedded Leiningen version upgraded from version 2.3.4 to 2.5.0
- Leiningen Automatic detection now works only if the project does not already have Java Classpath metadata set (technically speaking: if the project does not have the Java Nature).


== Changes between Counterclockwise 0.28.0 and 0.28.1

`0.28.1` released on September 28, 2014

=== Fix

- Drag & Drop from Github / Bitbucket / Google Code URLs works in Linux

=== Enhancements

==== Leiningen / Clojure autodetection

- Added a check for missing `.classpath` file for Leiningen projects. Automatically reconstruct the java build path if it is missing.
- Better User feedback for Drag & Drop folder actions


== Changes between Counterclockwise 0.27.1 and 0.28.0

`0.28.0` released on September 25, 2014

=== Enhancements

==== Automatic configuration of Leiningen Projects

In reaction to a project creation which contains a `project.clj` file, or an existing project modification consisting in adding a `project.clj` file, etc., CCW will by default react by adding the `Leiningen Nature` to the project. Meaning you'll see the `Leiningen Dependencies` Classpath Container appear in the project, and be able to launch it as a Leiningen project.

This feature can be disabled globally via the menu:Preferences[Clojure > General > Automatic detection of Clojure/Leiningen projects] preference

==== Project Drag and Drop from OS to Counterclockwise
